--- a/resource/css/sectionAbout.css
+++ b/resource/css/sectionAbout.css
@@ -12,13 +12,24 @@
 
 .info__col--img{
     position: relative;
+    /* *! */
+    transform: translateX(-50px);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
 }
 .about_img02{
     position: absolute;
     top: 0;
     left: 20%;
 }
-
+/* *! */
+.info__col--descript{
+    transform: translateX(50px);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
 .info__col--descript .title__content{
     width: 70%;
 }
@@ -107,4 +118,11 @@
     height: 100%;
     background-color: var(--color-blue);
     transition: 0.5s;
+}
+
+/* *! */
+.show-animation{
+    transform: translateX(0);
+    visibility: visible;
+    opacity: 1;
 }
