--- a/resource/css/sectionRoadmap.css
+++ b/resource/css/sectionRoadmap.css
@@ -32,24 +32,25 @@
 .roadmap__haft--top{
     position: relative;
     overflow: visible;
-    padding: 50px 0;
-    padding: 50px 50px;
+    margin: 50px 50px;
+    display: flex;
+    justify-content: center;
     
 }
 /* thanh doc xam o giua */
-.map__container::after{
+.roadmap__haft--top::after{
     content: "";
     position: absolute;
     top:50%;
     transform: translateY(-50%);
-    width: 90%;
+    min-width: 100%;
     height: 8px;
     background: linear-gradient(294.72deg, #FF4581 9.05%, #4388DD 79.28%);
     opacity: 0.1;
     
 }
 .map__container{
-    max-width: 100%;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     padding: 0;
@@ -74,19 +75,9 @@
     flex-direction: column;
     align-self: flex-end;
     height: 305px;
-    /* display: flex;
-    width: 370px;
-    flex: 0 0 auto;
-    height: 305px;
-    align-self: flex-end;
-    flex-direction: column;
-    justify-content: flex-start; */
-    /* *!warning */
-    /* position: absolute;
-    top: 38.5%; */
 }
 .map__item:not(:first-child) {
-    margin-left: -155px;
+    margin-left: -130px;
 }
 .map__item--content{
     position: relative;
@@ -171,8 +162,23 @@
 .map__item:nth-child(7) .map__item--content::before,.map__item:nth-child(7) .dot::after{
     background-color: var(--color--pink);
 }
+/* custom scroll bar */
 
+#style-6::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #0B1D33;
+}
 
+#style-6::-webkit-scrollbar
+{
+	height: 5px;
+}
+
+#style-6::-webkit-scrollbar-thumb
+{
+	background-color: var(--color-grey);	
+}
 /* roadmap document */
 .doc__col{
     padding: 0 50px;
